update index.html to use remote closure cdn (for demo use only)

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <!-- Google Closure -->
-    <script src="js/closure/goog/base.js"></script>
+    <!-- Google Closure, cdn for demo use only -->
+    <script src="https://cdn.rawgit.com/google/closure-library/master/closure/goog/base.js"></script>
     <!-- my code -->
     <script src="js/game.js"></script>
   </body>
