--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
       <div id="wrapper">
         <div id="canvas-column">
           <canvas id="game-canvas" width="640" height="640"></canvas>
-          <div class="text-center">
-            <ul class="list-inline">
-              <li><strong>Space:</strong> start/pause</li>
-              <li><strong>Enter:</strong> reset</li>
-              <li><strong>A:</strong> add walls</li>
-              <li><strong>R:</strong> remove walls</li>
-              <li><strong>H:</strong> move hero</li>
-              <li><strong>G:</strong> move goal</li>
-            </ul>
-          </div>
+          <p class="text-center"><strong>Space:</strong> start/pause &nbsp;&nbsp;
+             <strong>Enter:</strong> reset &nbsp;&nbsp;
+             <strong>D:</strong> diagonal moves &nbsp;&nbsp;
+             <strong>S:</strong> slow speed &nbsp;&nbsp;
+             <strong>N:</strong> normal speed &nbsp;&nbsp;
+          <br>
+             <strong>F:</strong> fast speed &nbsp;&nbsp;
+             <strong>A:</strong> add walls &nbsp;&nbsp;
+             <strong>R:</strong> remove walls &nbsp;&nbsp;
+             <strong>H:</strong> move hero &nbsp;&nbsp;
+             <strong>G:</strong> move goal &nbsp;&nbsp;
+          </p>
         </div>
         <div id="side-buttons-column">
           <div id="control-buttons">
@@ -39,11 +41,17 @@
             <button class="btn btn-block btn-warning" id="reset-button">Reset</button>
           </div>
           <div id="selector-buttons">
-            <h4 class="text-center">Left Click Action</h4>
-            <button class="btn btn-block btn-info" id="add-walls-button">Add Walls</button>
-            <button class="btn btn-block" id="remove-walls-button">Remove Walls</button>
-            <button class="btn btn-block" id="move-hero-button">Move Hero</button>
-            <button class="btn btn-block" id="move-goal-button">Move Goal</button>
+            <h4 class="text-center"><strong>Game Options</strong></h4>
+              <button class="btn btn-block btn-info" id="diag-moves-button">Diagonal Moves</button>
+            <h4 class="text-center"><strong>Hero Speed</strong></h4>
+              <button class="btn btn-block" id="slow-speed-button">Slow</button>
+              <button class="btn btn-block btn-info" id="normal-speed-button">Normal</button>
+              <button class="btn btn-block" id="fast-speed-button">Fast</button>
+            <h4 class="text-center"><strong>Left Click</strong></h4>
+              <button class="btn btn-block btn-info" id="add-walls-button">Add Walls</button>
+              <button class="btn btn-block" id="remove-walls-button">Remove Walls</button>
+              <button class="btn btn-block" id="move-hero-button">Move Hero</button>
+              <button class="btn btn-block" id="move-goal-button">Move Goal</button>
           </div>
         </div>
       </div>
