--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <!-- Google Closure, cdn for demo use only -->
     <script src="https://cdn.rawgit.com/google/closure-library/master/closure/goog/base.js"></script>
     <!-- my code -->
+    <script src="js/helper.js"></script>
     <script src="js/game.js"></script>
   </body>
 </html>
