--- a/index.html
+++ b/index.html
@@ -67,5 +67,6 @@
     <!-- my code -->
     <script src="js/helper.js"></script>
     <script src="js/game.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
