add random starting/reset map, fix #16

--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
             <button class="btn btn-block btn-success" id="start-pause-button">Start</button>
             <button class="btn btn-block btn-warning" id="reset-button">Reset</button>
           </div>
+          <div class="map-select">
+            <select class="form-control" id="change-map" size="1">
+              <option value="1">Random Maze</option>
+              <option value="2">Spiral Maze</option>
+              <option value="3">Empty Maze</option>
+            </select>
+          </div>
           <div id="selector-buttons">
             <h4 class="text-center"><strong>Game Options</strong></h4>
               <button class="btn btn-block btn-info" id="diag-moves-button">Diagonal Moves</button>
