add min js files, fix #14

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     <!-- Google Closure, cdn for demo use only -->
     <script src="https://cdn.rawgit.com/google/closure-library/master/closure/goog/base.js"></script>
     <!-- my code -->
-    <script src="js/helper.js"></script>
-    <script src="js/game.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/helper-min.js"></script>
+    <script src="js/game-min.js"></script>
+    <script src="js/main-min.js"></script>
   </body>
 </html>
